# alfred-tool

./: .gitignore  Cargo.toml  LICENSE  README.md
alfred/: Cargo.toml  README.md
alfred-primitives/: Cargo.toml  alfred_script_filter.json
alfred-primitives/src/: types.rs
src/: command.rs  error.rs  main.rs
src/task/: mod.rs  subscan.rs
src/types/: mod.rs  ss58_registry.rs
