[package]
name = "alfred_tool"
version = "0.1.0"
edition = "2021"
description = "A binary tool for alfred script."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
structopt = "0.3.26"
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }